# treedb

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.profiler  PLAN  README.md  compose.prod.yaml  compose.yaml  docker-healthcheck.c  docker-profiler-entrypoint.sh  sdk-plan.md  treeseed.package.yaml
.github/workflows/: dev-image.yml  publish.yml  python-sdk-release-gate.yml  release-gate.yml  sdk-conformance.yml  sdk-integration.yml  sdk-packages.yml  sdk-spec.yml
apps/api/: mix.exs
crates/treedb_store/: Cargo.toml
crates/treedb_store/src/: audit.rs  catalog.rs  error.rs  federation.rs  ids.rs  lib.rs  log.rs  manifest.rs  policy.rs  recovery.rs  segment.rs  types.rs  workspace.rs  workspace_files.rs
crates/treedb_store/tests/: catalog_tests.rs  graph_refresh_job_tests.rs  policy_tests.rs  recovery_tests.rs  search_index_tests.rs
profiles/: compose.profile.binary.yaml  compose.profile.connected-library.yaml  compose.profile.federation-soak.yaml  compose.profile.federation.yaml  compose.profile.fixed.yaml  compose.profile.graph.yaml  compose.profile.mirror-federation.yaml  compose.profile.portfolio.yaml  compose.profile.read-heavy.yaml  compose.profile.soak.yaml  compose.profile.write-heavy.yaml  compose.profile.yaml
scripts/: bump-release-version.mjs  check-sdk-docs.sh  federation-live-check.sh  mvp-smoke.sh  profile-compose.sh  release-tag.sh  sdk-live-contract.sh  security-check.sh  test-sdk-packages.sh  test-stage0-fast.sh  test-stage0.sh  test-stage1-fast.sh  test-stage5-fast.sh  test-treedb-fast.sh  test-treedb-full.sh
(+263 files in other folders)
